syntax = "proto3";

package test;

service ExceptionTestService {
  rpc GetException(Empty) returns (Empty);
}

message Empty {

}


